# PulsarV2

./: Cargo.toml
pulsar_app/: Cargo.toml
pulsar_backend/: Cargo.toml
pulsar_backend/src/: lib.rs
pulsar_backend/src/audio_device/: enumeration.rs  mod.rs  negotiation.rs
pulsar_backend/src/rt_processing/: callback.rs  mod.rs  performance.rs  routing.rs  voice_renderer.rs
pulsar_backend/src/rt_processing/waveform/: envelopes.rs  mod.rs  noise.rs  oscillators.rs  tables.rs
pulsar_core/: Cargo.toml
